--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src = "main.js"></script>
+    <script src = "index.js"></script>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <a href = "https://www.linkedin.com/in/pj-samuels/">LinkedIn</a> 
