--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        <a href = "https://www.linkedin.com/in/pj-samuels/">LinkedIn</a> 
-        <a href = "https://github.com/PJ-Samuels">github</a>
-        <a> resume</a>
+        <a href="https://www.linkedin.com/in/pj-samuels/">
+            <img src="./images/linkedin.svg" alt="LinkedIn Profile">
+        </a>
+        
+        <a href = "https://github.com/PJ-Samuels">
+            <img src = "./images/github.svg">
+        </a>
+        <a > <img src = "./images/archive.svg"></a>
 
         
         <h1 class = "header">Oliver Samuels</h1>
