--- a/index.html
+++ b/index.html
@@ -188,17 +188,19 @@
                             Cross-Platform Access: Enjoy the app's full functionality whether you're on your desktop or using your mobile device, ensuring continuous music discovery and enjoyment.<br/>
                             Personalized Playlists: Curate your own playlists or discover personalized playlists based on your music preferences, moods, and listening history.</p>
                         <p>Technologies: React.js, PostgreSQL, Express.js, Flutter(Dart), Spotify API</p>
-                        
+
                         <a href="https://github.com/PJ-Samuels/Notified-App">GitHub Repo</a>
                     </div>
                     <div class="project-image">
-                        <img src="./images/spotify.png" alt="Project Image">
+                        <img src="./images/drake.png" alt="Project Image">
                     </div>
                 </div>
             </div>
             <div class = "project-card-right animate-left">
                 <h2>Fitness Finder</h2>
-                <img src = "./images/ftiness-finder.png">
+                <!-- <div class="project-image">
+                    <img src="./images/drake.png" alt="Project Image">
+                </div> -->
                 <div class = "project-summary" >
                     <h3>Fitness Center Locator</h3>
                     <p>Web-App Application </p>
@@ -211,7 +213,7 @@
                         User Reviews and Ratings: Make informed decisions by reading user reviews and ratings for each fitness center.<br/>
                         Personalized Recommendations: Receive personalized recommendations based on your fitness goals, preferences, and activity levels. <br/>
                     </p>
-                    <p>Techonologies: Anuglar, Typescript, Express.js, MongoDB, Google Firebase</p>
+                    <p>Techonologies: Angular, Typescript, Express.js, MongoDB, Google Firebase</p>
                     <a href  = "https://github.com/PJ-Samuels/Fitness-Center-App">github repo</a>
                 </div>
 
@@ -223,7 +225,7 @@
                 <p>hardware development </p>
                 <p>Technologies:</p>
                 <p>python, flask, JavaScript</p>
-                <img src = "./images/stocks.jpeg">
+                <!-- <img src = "./images/stocks.jpeg"> -->
                 <a href  = "https://github.com/PJ-Samuels/Stock-Visualizer">github repo</a>
                 <h2>Arduino Projects</h2>
                 <h3>TBD</h3>
@@ -231,7 +233,7 @@
                 <p>hardware development </p>
                 <p>Technologies:</p>
                 <p>Tinkercad, C++, Arduino</p>
-                <img src = "./images/arduino.jpeg">
+                <!-- <img src = "./images/arduino.jpeg"> -->
                 <a href  = "https://www.tinkercad.com/things/104RQqB9LI3">Tinkercad liinks</a>
             </div>
         </div>
