--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </head>
     <body>
         <a class = "socials" href = "https://www.linkedin.com/in/pj-samuels/">
-            <img  src="./images/linkedin.svg" alt="LinkedIn Profile">
+            <img  src="./images/icons/linkedin.svg" alt="LinkedIn Profile">
         </a>
         
-        <a class = "socials"href = "https://github.com/PJ-Samuels">
-            <img src = "./images/github.svg">
+        <a class = "socials" href = "https://github.com/PJ-Samuels">
+            <img src = "./images/icons/github.svg">
         </a>
-        <a  class = "socials"> <img src = "./images/archive.svg"></a>
+        <a class = "socials"> <img src = "./images/icons/archive.svg"></a>
 
         
         <h1 class = "header">PJ Samuels</h1>
@@ -82,23 +82,6 @@
                     <li>Redis</li>
                 </ul>
             </div>
-        </div>
-        <div class = "skill-images">
-            <img width = "20px" height = "20px" src = "./images/html5.svg">
-            <img width = "20px" height = "20px" src = "./images/react.svg">
-            <img width = "20px" height = "20px" src = "./images/js.svg">
-            <img width = "20px" height = "20px" src = "./images/css3.svg">
-            <img width = "20px" height = "20px" src = "./images/python.svg">
-            <img width = "20px" height = "20px" src = "./images/java.svg">
-            <img width = "20px" height = "20px" src = "./images/database-solid.svg">
-            <img width = "20px" height = "20px" src = "./images/node.svg">
-            <img width = "20px" height = "20px" src = "./images/angular.svg">
-            <img width = "20px" height = "20px" src = "./images/aws.svg">
-            <img width = "20px" height = "20px" src = "./images/ts.svg">
-            <img width = "20px" height = "20px" src = "./images/firebase.svg">
-            <img width = "20px" height = "20px" src = "./images/mysql.svg">
-            <img width = "20px" height = "20px" src = "./images/postgresql.svg">
-            <img width = "20px" height = "20px" src = "./images/mongodb.svg">
         </div>
         <h1 class = "title">Job Experiences</h1>
         <div class = "work_experience">
@@ -192,7 +175,7 @@
                         <a href="https://github.com/PJ-Samuels/Notified-App">GitHub Repo</a>
                     </div>
                     <div class="project-image">
-                        <img src="./images/drake.png" alt="Project Image">
+                        <img src="./images/project-images/drake.png" alt="Project Image">
                     </div>
                 </div>
             </div>
@@ -204,8 +187,8 @@
                 <div class = "project-summary" >
                     <h3>Fitness Center Locator</h3>
                     <p>Web-App Application </p>
-                    <p>Summary: Experience the convenience of finding the perfect fitness center near you with our Fitness Center Locator web application. Whether you're a 
-                        fitness enthusiast or just beginning your health journey, our app helps you locate and explore fitness centers tailored to your preferences.<br/>
+                    <p>Summary: Experience the convenience of finding the perfect fitness center near you with our Fitness Center Locator web application. <br/>
+                        Whether you're a fitness enthusiast or just beginning your health journey, our app helps you locate and explore fitness centers tailored to your preferences.<br/>
 
                         Features:<br/>
                         Location-Based Search: Quickly discover fitness centers based on your location, ensuring convenience and accessibility.<br/>
@@ -214,29 +197,43 @@
                         Personalized Recommendations: Receive personalized recommendations based on your fitness goals, preferences, and activity levels. <br/>
                     </p>
                     <p>Techonologies: Angular, Typescript, Express.js, MongoDB, Google Firebase</p>
-                    <a href  = "https://github.com/PJ-Samuels/Fitness-Center-App">github repo</a>
+                    <a href  = "https://github.com/PJ-Samuels/Fitness-Center-App">Github Repo</a>
                 </div>
 
             </div>
             <div class = "project-card-left animate-right">
                 <h2>Other Projects</h2>
-                <h3>TBD</h3>
-                <p>Summary:</p>
-                <p>hardware development </p>
-                <p>Technologies:</p>
-                <p>python, flask, JavaScript</p>
-                <!-- <img src = "./images/stocks.jpeg"> -->
-                <a href  = "https://github.com/PJ-Samuels/Stock-Visualizer">github repo</a>
-                <h2>Arduino Projects</h2>
-                <h3>TBD</h3>
-                <p>Summary:</p>
-                <p>hardware development </p>
-                <p>Technologies:</p>
-                <p>Tinkercad, C++, Arduino</p>
-                <!-- <img src = "./images/arduino.jpeg"> -->
-                <a href  = "https://www.tinkercad.com/things/104RQqB9LI3">Tinkercad liinks</a>
+                <div class = "project-summary">
+                    <h3>Stock-Visualizer</h3>
+                    <p>Summary: Hardware development</p>
+                    <p>Technologies: React.js, Flask, JavaScript</p>
+                    <!-- <img src = "./images/stocks.jpeg"> -->
+                    <a href  = "https://github.com/PJ-Samuels/Stock-Visualizer">Github Repo</a>
+                </div>
+                <div class = "project-summary">
+                    <h3>Arduino</h3>
+                    <p>Summary: hardware development </p>
+                    <p>Technologies: Tinkercad, C++, Arduino</p>
+                    <!-- <img src = "./images/arduino.jpeg"> -->
+                    <a href  = "https://www.tinkercad.com/things/104RQqB9LI3">Tinkercad</a>
+                </div>
             </div>
         </div>
-
+                <div class = "skill-images">
+            <img width = "20px" height = "20px" src = "./images/icons/html5.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/react.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/js.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/css3.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/python.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/java.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/node.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/angular.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/aws.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/ts.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/firebase.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/mysql.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/postgresql.svg">
+            <img width = "20px" height = "20px" src = "./images/icons/mongodb.svg">
+        </div>
     </body>
 </html>
