--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src = "index.js"></script>
     <head>
-        <title>Home</title>
+        <title>Portfolio | PJ Samuels</title>
         <link rel="icon" href="./images/logo.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -170,7 +170,14 @@
                             Real-time Notifications: Receive instant notifications about new music releases, personalized playlists, and artist updates, ensuring you're always in the know.<br/>
                             Cross-Platform Access: Enjoy the app's full functionality whether you're on your desktop or using your mobile device, ensuring continuous music discovery and enjoyment.<br/>
                             Personalized Playlists: Curate your own playlists or discover personalized playlists based on your music preferences, moods, and listening history.</p>
-                        <p>Technologies: React.js, PostgreSQL, Express.js, Flutter(Dart), Spotify API</p>
+                        <!-- <p>Technologies: React.js, PostgreSQL, Express.js, Flutter(Dart), Spotify API</p> -->
+                        <img width = "10px" height = "10px" src = "./images/icons/react.svg">
+                        <img width = "20px" height = "20px" src = "./images/icons/postgresql.svg">
+                        <img width = "20px" height = "20px" src = "./images/icons/express.svg">
+                        <img width = "20px" height = "20px" src = "./images/icons/node.svg">
+                        <img width = "20px" height = "20px" src = "./images/icons/Flutter2.svg">
+                        <img width = "20px" height = "20px" src = "./images/icons/spotify.svg">
+
 
                         <a href="https://github.com/PJ-Samuels/Notified-App">GitHub Repo</a>
                     </div>
@@ -196,7 +203,15 @@
                         User Reviews and Ratings: Make informed decisions by reading user reviews and ratings for each fitness center.<br/>
                         Personalized Recommendations: Receive personalized recommendations based on your fitness goals, preferences, and activity levels. <br/>
                     </p>
-                    <p>Techonologies: Angular, Typescript, Express.js, MongoDB, Google Firebase</p>
+                    <!-- <p>Techonologies: Angular, Typescript, Express.js, MongoDB, Google Firebase</p> -->
+                    <img width = "20px" height = "20px" src = "./images/icons/angular.svg">
+                    <img width = "20px" height = "20px" src = "./images/icons/ts.svg">
+                    <img width = "20px" height = "20px" src = "./images/icons/express.svg">
+                    <img width = "20px" height = "20px" src = "./images/icons/node.svg">
+                    <img width = "20px" height = "20px" src = "./images/icons/mongodb.svg">
+                    <img width = "20px" height = "20px" src = "./images/icons/firebase.svg">
+
+
                     <a href  = "https://github.com/PJ-Samuels/Fitness-Center-App">Github Repo</a>
                 </div>
 
@@ -219,21 +234,14 @@
                 </div>
             </div>
         </div>
-                <div class = "skill-images">
+            <!-- <div class = "skill-images">
             <img width = "20px" height = "20px" src = "./images/icons/html5.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/react.svg">
             <img width = "20px" height = "20px" src = "./images/icons/js.svg">
             <img width = "20px" height = "20px" src = "./images/icons/css3.svg">
             <img width = "20px" height = "20px" src = "./images/icons/python.svg">
             <img width = "20px" height = "20px" src = "./images/icons/java.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/node.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/angular.svg">
             <img width = "20px" height = "20px" src = "./images/icons/aws.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/ts.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/firebase.svg">
             <img width = "20px" height = "20px" src = "./images/icons/mysql.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/postgresql.svg">
-            <img width = "20px" height = "20px" src = "./images/icons/mongodb.svg">
-        </div>
+        </div> -->
     </body>
 </html>
