--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Software Engineer Intern</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">2022</p>
                   <div class="accordion">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Summary
+                            Work Description
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -105,12 +105,12 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Data Science Intern</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">2021</p>
                     <div class="accordion">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Summary
+                                Work Description
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -126,12 +126,12 @@
                 <div class="card-header">CRACE Financial</div>
                 <div class="card-body">
                     <h5 class="card-title">Test Automation Intern</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">2020</p>
                     <div class="accordion">
                     <div class="accordion-item">
                             <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Summary
+                                Work Description
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -204,7 +204,7 @@
                 <h2>Other Projects</h2>
                 <div class = "project-summary">
                     <h3>Stock-Visualizer</h3>
-                    <p>Summary: Hardware development</p>
+                    <p>Summary: Basic React-Flask App</p>
                     <!-- <p>Technologies: React.js, Flask, JavaScript</p> -->
                     <!-- <img width = "20px" height = "20px" src = "./images/icons/java.svg"> -->
                     <img width = "20px" height = "20px" src = "./images/icons/react.svg">
