--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src = "index.js"></script>
     <head>
         <title>Portfolio | PJ Samuels</title>
-        <link rel="icon" href="./images/logo.ico" type="image/x-icon">
+        <link rel="icon" href="./images/pj.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="index.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
@@ -13,6 +13,7 @@
     <body>
         <a class = "socials" href = "https://www.linkedin.com/in/pj-samuels/"><img  src="./images/icons/linkedin.svg" alt="LinkedIn Profile"></a>
         <a class = "socials" href = "https://github.com/PJ-Samuels"><img src = "./images/icons/github.svg"></a>
+        <!-- <img src = "./images/icons/mylogo.svg"> -->
         <!-- <a class = "socials"> <img src = "./images/icons/archive.svg"></a> -->
         <h1 class = "header">PJ Samuels</h1>
         <h2 class = "title">Full-Stack & Mobile Developer</h2>
