--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h2>Fitness Finder</h2>
                 <div class="project-content">
                     <div class="project-image">
-                        <img src="./images/project-images/drake.png" alt="Project Image">
+                        <img src="./images/project-images/comingsoon.jpeg" alt="Project Image">
                     </div>
                     <div class = "project-summary" >
                         <h3>Fitness Center Locator</h3>
@@ -190,7 +190,7 @@
 
                                 Features:<br/>
                                 Location-Based Search: Quickly discover fitness centers based on your location, ensuring convenience and accessibility.<br/>
-                                Detailed Information: Get comprehensive details about each fitness center, including facilities, classes, trainers, and user reviews.<br/>
+                                Detailed Information: Get details about each fitness center, including facilities, classes, trainers, and user reviews.<br/>
                                 User Reviews and Ratings: Make informed decisions by reading user reviews and ratings for each fitness center.<br/>
                                 Personalized Recommendations: Receive personalized recommendations based on your fitness goals, preferences, and activity levels. <br/>
                             </p>
