color palette change:

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     </head>
     <body>
-        <a class = "socials" href = "https://www.linkedin.com/in/pj-samuels/"><img  src="./images/icons/linkedin.svg" alt="LinkedIn Profile"></a>
-        <a class = "socials" href = "https://github.com/PJ-Samuels"><img src = "./images/icons/github.svg"></a>
+
         <!-- <img src = "./images/icons/mylogo.svg"> -->
-        <!-- <a class = "socials"> <img src = "./images/icons/archive.svg"></a> -->
         <h1 class = "header">PJ Samuels</h1>
         <h2 class = "title">Full-Stack & Mobile Developer</h2>
+        <a class = "socials" href = "https://www.linkedin.com/in/pj-samuels/"><img  src="./images/icons/linkedin.svg" alt="LinkedIn Profile"></a>
+        <a class = "socials" href = "https://github.com/PJ-Samuels"><img src = "./images/icons/github.svg"></a>
         <div class = "summary">
             <p>
                 Hey I'm Oliver Samuels, a Full-Stack and Mobile-App Web Developer. I have a strong background in team collaborations and have successfully delivered
@@ -211,10 +211,9 @@
                 <div class = "project-summary">
                     <h3>Stock-Visualizer</h3>
                     <p>Summary: Basic React-Flask App</p>
-                    <!-- <img width = "20px" height = "20px" src = "./images/icons/java.svg"> -->
                     <img width = "20px" height = "20px" src = "./images/icons/react.svg">
                     <img width = "20px" height = "20px" src = "./images/icons/flask.svg">
-                    <img width = "20px" height = "20px" src = "./images/icons/python.svg">
+                    <!-- <img width = "20px" height = "20px" src = "./images/icons/python.svg"> -->
                     <img width = "20px" height = "20px" src = "./images/icons/js.svg"><br/>
                     <a href  = "https://github.com/PJ-Samuels/Stock-Visualizer">Github Repo</a>
                 </div>
